--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@tanstack/react-query": "^5.52.1",
     "antd": "^5.20.2",
     "axios": "^1.7.4",
@@ -17,6 +18,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.1",
     "sort-by": "^1.2.0"
   },
