--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.52.1",
     "antd": "^5.20.2",
     "axios": "^1.7.4",
+    "firebase": "^10.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
